Fix bug 523860 - Do not escape double quote character " to \" in iCalendar output (potential RFC 2445 violation). r=mmecca